Updates for DataLink output.